# px4-perception-planning

./: README.md  docker-compose.yml  px4-sitl.Dockerfile
ros2_ws/install/detection_msgs/share/detection_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/detection_msgs/share/detection_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  detection_msgsConfig-version.cmake  detection_msgsConfig.cmake  detection_msgs__rosidl_typesupport_cExport-noconfig.cmake  detection_msgs__rosidl_typesupport_cppExport-noconfig.cmake  detection_msgs__rosidl_typesupport_cppExport.cmake  detection_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  detection_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_detection_msgs__rosidl_generator_cExport-noconfig.cmake  export_detection_msgs__rosidl_generator_cExport.cmake  (+7 more)
ros2_ws/install/yolo_detection/lib/yolo_detection/: visualizer_node  yolo_node
ros2_ws/install/yolo_detection/share/yolo_detection/: package.ps1  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/depth_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/depth_perception/depth_perception/: point_cloud_node.py
ros2_ws/src/depth_perception/launch/: depth_perception.launch.py
ros2_ws/src/depth_perception/rviz/: depth_perception.rviz
ros2_ws/src/detection_msgs/: CMakeLists.txt
ros2_ws/src/path_planning/: package.xml  setup.py
ros2_ws/src/path_planning/launch/: global_planning.launch.py  local_planning.launch.py
ros2_ws/src/path_planning/params/: scenario.yaml
ros2_ws/src/path_planning/path_planning/: global_planner_node.py  local_planner_node.py  mission_executor_node.py  occupancy_grid.py  planners.py
ros2_ws/src/path_planning/rviz/: path_planning.rviz
ros2_ws/src/yolo_detection/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolo_detection/launch/: yolo_detection.launch.py
ros2_ws/src/yolo_detection/yolo_detection/: yolo_node.py
worlds/: aufgabe1_fuel_world.sdf
(+53 files in other folders)
