<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_detection</name>
  <version>0.0.1</version>
  <description>ROS2 YOLO object detection node for PX4 SITL camera streams</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>detection_msgs</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
